Some Spacing FIxes
I have experimented some spacing changes. Changes made are on about and help page.

--- a/css/main.css
+++ b/css/main.css
@@ -30,36 +30,52 @@ body {
   margin:0;
   min-height: 100%;
 }
+
 .title {
   font-size: 3rem;
   font-family: 'Clarendon';
   color: #D4C090;
   text-decoration: none;
 }
+
 .title:hover, .title:focus {
   font-size: 3rem;
   font-family: 'Clarendon';
   text-decoration: none;
   color: #b1a071;
 }
+
 p {
   display: inline;
   font-family: 'RangeMono-Light';
+
+    padding-left: 1rem;
+    padding-right: 2rem;
+    margin-top: 1rem;
 }
+
 .bold {
   font-family: 'RangeMono-Reg';
 }
+
 h1, h2, h3 {
   font-family: 'VeneerTwo';
+  margin-bottom:-1rem;
+  padding-left: 1rem;
 }
+
 h1{
   font-size: 2.5rem;
   color: #2a2a30;
+  margin-bottom:-1rem;
+  padding-left: 1rem;
 }
+
 h2{
   font-size: 2rem;
   color: #4c585d;
 }
+
 h3{
   font-size: 1.5rem;
   color: #72848a;
@@ -82,13 +98,13 @@ nav {
   padding: 1rem;
   justify-content: space-between;
 }
-/*padding: 1rem;*/
-}
+
 
 .mainContainer {
   background-color: white;
-display:block;
+  display:flex;
 }
+
 
 footer {
   width: 100%;
@@ -103,6 +119,17 @@ footer {
 Widgets ELEMENTS -------------------
 */
 
+.description-box{
+  display: flex;
+  flex-direction: column;
+}
+
+.textfield-box{
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+
 .sideMargin{
   display: flex;
   flex: 1 0 0;
@@ -115,16 +142,16 @@ Widgets ELEMENTS -------------------
 }
 
 .banner{
-background-size: contain;
-display:flex;
-max-height:412px;
+  background-size: contain;
+  display:flex;
+  max-height:412px;
 }
 
 .banner img{
-    width: 100%;
-    height: auto;
-    /* min-width: 1200px; */
-    object-fit: cover;
+  width: 100%;
+  height: auto;
+  /* min-width: 1200px; */
+  object-fit: cover;
 }
 
 .bottom-banner{
@@ -140,9 +167,9 @@ max-height:412px;
 }
 
 .banner2-images{
-width: 100%;
-height:412px;
-object-fit: cover;
+  width: 100%;
+  height:412px;
+  object-fit: cover;
 }
 
 .banner2-column{
@@ -157,8 +184,6 @@ object-fit: cover;
   height:50%;
   object-fit: cover;
 }
-
-
 
 .product-card-box{
   max-width: 20%;
@@ -179,6 +204,7 @@ object-fit: cover;
   min-width: 80%;
   max-width: 1000px;
 }
+
 .halfColumn {
   min-width: 40%;
   max-width: 500px;
@@ -305,9 +331,9 @@ select {
 }
 
 /*
-	Ratings Stars
-  (with as little code as possible)
-  https://css-tricks.com/star-ratings/
+Ratings Stars
+(with as little code as possible)
+https://css-tricks.com/star-ratings/
 */
 .rating {
   unicode-bidi: bidi-override;
@@ -326,8 +352,8 @@ select {
 }
 .rating > span:hover:before,
 .rating > span:hover ~ span:before {
-   content: "\2605";
-   position: absolute;
-   left: 0; 
-   color: #D4C090;
+  content: "\2605";
+  position: absolute;
+  left: 0;
+  color: #D4C090;
 }
